Fix css bugs: sticky hover, misaligned text

--- a/travelog-client/src/index.css
+++ b/travelog-client/src/index.css
@@ -16,6 +16,9 @@ body {
   ) !important;
 }
 
+.ui.segment.map-segment:hover {
+  background-color: lightcyan;
+}
 
 /*home page styles*/
 
